// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrContainerOrderedListComponent isPreview should add "hst-container-*" classes in preview 1`] = `
<div
  class="hst-container"
  id="root1"
>
  <li
    class="hst-container-item"
  >
    
  </li>
  <li
    class="hst-container-item"
  >
    
  </li>
  
</div>
`;

exports[`BrContainerOrderedListComponent should render a container 1`] = `
<div
  id="root0"
>
  <li>
    
  </li>
  <li>
    
  </li>
  
</div>
`;
